
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_nl {int nl_pid; unsigned long nl_groups; } ;
typedef int addr ;


 scalar_t__ _getsockname (int,struct sockaddr_nl*,size_t*) ;
 int memset (struct sockaddr_nl*,int ,int) ;
 int perror (char*) ;
 int printf (char*,...) ;

__attribute__((used)) static bool check_realloc_succeed(int sock_fd, int magic_pid, unsigned long magic_groups)
{
  struct sockaddr_nl addr;
  size_t addr_len = sizeof(addr);

  memset(&addr, 0, sizeof(addr));

  if (_getsockname(sock_fd, &addr, &addr_len))
  {
    perror("[-] getsockname");
    goto fail;
  }
  printf("[ ] addr_len = %lu\n", addr_len);
  printf("[ ] addr.nl_pid = %d\n", addr.nl_pid);
  printf("[ ] magic_pid = %d\n", magic_pid);

  if (addr.nl_pid != magic_pid)
  {
    printf("[-] magic PID does not match!\n");
    goto fail;
  }

  if (addr.nl_groups != magic_groups)
  {
    printf("[-] groups pointer does not match!\n");
    goto fail;
  }

  return 1;

fail:
  printf("[-] failed to check realloc success status!\n");
  return 0;
}
